--- a/WDD_final/index.html
+++ b/WDD_final/index.html
@@ -26,7 +26,7 @@
   
   <div id="Text">
     <div id='Center'>
-        <p id="Welcome">WHY CHRISTIANITY?</p>
+        <p id="Welcome">BUT THE WORD OF THE LORD ENDURES FOREVER.</p>
     </div>
   </div>
   </body>
